--- a/app/assets/stylesheets/talent.css.scss
+++ b/app/assets/stylesheets/talent.css.scss
@@ -177,7 +177,7 @@
   #talent-section #banner-section .content p {
     font-size: 1.25rem;
     line-height: 1.75rem;
-    padding-top: 0;
+    padding-top: 6rem;
     padding-right: 0;
     margin: 0;
   }
